# teoMWI_Archived

./: CMakeLists.txt  MiddlewareInterface.cpp  MiddlewareInterface.h  README.md
