project(teoMWI)

add_definitions(-std=c++0x -DYARP_NO_DEPRECATED_WARNINGS=ON)


# source files
aux_source_directory(. teoMWI_SRCS)
#INCLUDE_DIRECTORIES(.)

find_package(YARP REQUIRED)

FILE(GLOB_RECURSE teoMWI_INCLUDE_LIST *.h *.hpp)
set(SUBDIR_INCLUDE_DIRECTORIES ${SUBDIR_INCLUDE_DIRECTORIES} ${CMAKE_CURRENT_SOURCE_DIR} PARENT_SCOPE)
set(SUBDIR_LINK_NAMES ${SUBDIR_LINK_NAMES} ${PROJECT_NAME} PARENT_SCOPE)

ADD_LIBRARY(${PROJECT_NAME} STATIC ${teoMWI_SRCS} ${teoMWI_INCLUDE_LIST})

target_link_libraries(teoMWI ${YARP_LIBRARIES})






